fixing the responsive experience on mobile or screens up to 600px width.

--- a/css/landing.css
+++ b/css/landing.css
@@ -346,11 +346,13 @@ body {
   padding: 2rem; }
   .about-us .container {
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     padding: 10rem;
     column-gap: 20rem; }
     .about-us .container .left {
-      flex: 1;
+      width: 55rem;
       min-height: fit-content;
       color: black; }
       .about-us .container .left__icon-box {
@@ -359,7 +361,7 @@ body {
         .about-us .container .left__icon-box .icon {
           width: 55px; }
     .about-us .container .right {
-      flex: 1; }
+      width: 55rem; }
       .about-us .container .right .background {
         position: relative; }
         .about-us .container .right .background .square {
@@ -402,7 +404,46 @@ body {
     .about-us__paragraph p span {
       font-weight: 800; }
 
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 600px) {
+  .hero {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 5rem 0;
+    background-color: #fff0ed; }
+    .hero-box {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      width: 70% !important; }
+      .hero-box p {
+        margin-bottom: 4rem; }
+      .hero-box__img {
+        max-height: 55rem;
+        min-height: 24rem;
+        height: 80vw;
+        align-self: center; }
+  .site-nav {
+    padding: 3rem 0rem;
+    flex-direction: column;
+    justify-content: center; }
+    .site-nav__logo {
+      margin-bottom: 2rem; }
+  html {
+    font-size: 58%; } }
+
+@media only screen and (max-width: 900px) {
+  .discount__paragraph {
+    font-size: 2.5rem; }
+  .footer {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 4rem; }
+  .info {
+    width: 40%; } }
+
+@media only screen and (max-width: 1200px) {
   .site-nav {
     align-items: center;
     justify-content: center; }
@@ -431,14 +472,3 @@ body {
   .about-us .container {
     justify-self: center;
     max-width: 80%; } }
-
-@media only screen and (max-width: 900px) {
-  .discount__paragraph {
-    font-size: 2.5rem; }
-  .footer {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    row-gap: 4rem; }
-  .info {
-    width: 40%; } }
