--- a/sass/landing-page/sections/_header.scss
+++ b/sass/landing-page/sections/_header.scss
@@ -22,3 +22,7 @@
     }
   }
 }
+
+@media only screen and (max-width: 600px) {
+
+}
