--- a/sass/landing-page/sections/_main.scss
+++ b/sass/landing-page/sections/_main.scss
@@ -30,12 +30,14 @@
 
   .container {
     display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     padding: 10rem;
     column-gap: 20rem;
 
     .left {
-      flex: 1;
+      width: 55rem;
       min-height: fit-content;
       color: black;
 
@@ -49,7 +51,7 @@
     }
 
     .right {
-      flex: 1;
+      width: 55rem;
 
       .background {
         position: relative;
