--- a/sass/landing-page/sections/_media-queries.scss
+++ b/sass/landing-page/sections/_media-queries.scss
@@ -1,4 +1,61 @@
-@media only screen and (max-width: 1100px) {
+@media only screen and (max-width: 600px) {
+  .hero {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 5rem 0;
+    background-color: $nitro-primary-pink;
+
+    &-box {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      width: 70% !important;
+
+      p {
+        margin-bottom: 4rem;
+      }
+
+      &__img {
+        max-height: 55rem;
+        min-height: 24rem;
+        height: 80vw;
+        align-self: center;
+      }
+    }
+  }
+  .site-nav {
+    padding: 3rem 0rem;
+    &__logo {
+      margin-bottom: 2rem;
+    }
+    flex-direction: column;
+    justify-content: center;
+  }
+  html {
+    font-size: 58%;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .discount__paragraph {
+    font-size: 2.5rem;
+  }
+
+  .footer {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    row-gap: 4rem;
+  }
+
+  .info {
+    width: 40%;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
   .site-nav {
     align-items: center;
     justify-content: center;
@@ -39,22 +96,5 @@
   .about-us .container {
     justify-self: center;
     max-width: 80%;
-  }
-}
-
-@media only screen and (max-width: 900px) {
-  .discount__paragraph {
-    font-size: 2.5rem;
-  }
-
-  .footer {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    row-gap: 4rem;
-  }
-
-  .info {
-    width: 40%;
   }
 }
